--- a/text classification/LSTM+Attention.ipynb
+++ b/text classification/LSTM+Attention.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -80,8 +80,8 @@
      "output_type": "stream",
      "text": [
       "Building prefix dict from the default dictionary ...\n",
-      "Loading model from cache C:\\Users\\ADMINI~1\\AppData\\Local\\Temp\\jieba.cache\n",
-      "Loading model cost 2.157 seconds.\n",
+      "Dumping model to file cache C:\\Users\\ADMINI~1\\AppData\\Local\\Temp\\jieba.cache\n",
+      "Loading model cost 5.798 seconds.\n",
       "Prefix dict has been built successfully.\n"
      ]
     }
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -145,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
        " ('配置', 4596)]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,21 +212,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([35, 128])\n",
-      "tensor([[  23,  499,   48,  ...,    3,   97,    3],\n",
-      "        [5755, 1179, 5475,  ...,  348,  646,  217],\n",
-      "        [   9, 3741,   10,  ...,   31,  411,   89],\n",
+      "torch.Size([28, 128])\n",
+      "tensor([[  367, 22789,   287,  ...,  6840,    80,     4],\n",
+      "        [   42,  7646,   438,  ...,    17,     1,    21],\n",
+      "        [    2,  1777,   193,  ...,   119,     1,     2],\n",
       "        ...,\n",
-      "        [   1,    1,    1,  ...,    1,    1,    1],\n",
-      "        [   1,    1,    1,  ...,    1,    1,    1],\n",
-      "        [   1,    1,    1,  ...,    1,    1,    1]])\n"
+      "        [    1,     1,     1,  ...,     1,     1,     1],\n",
+      "        [    1,     1,     1,  ...,     1,     1,     1],\n",
+      "        [    1,     1,     1,  ...,     1,     1,     1]])\n"
      ]
     }
    ],
@@ -246,49 +246,72 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 84,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class BiRNN(nn.Module):\n",
+    "class BiLSTM_Attention(nn.Module):\n",
     "    def __init__(self, vocab_size, embedding_dim, num_hiddens, num_layers):\n",
-    "        super(BiRNN, self).__init__()\n",
-    "        self.word_embeddings = nn.Embedding(vocab_size, embedding_dim)  # embedding之后的shape: torch.Size([200, 8, 300])\n",
-    "        self.word_embeddings = self.word_embeddings.from_pretrained(vectors, freeze=False)\n",
+    "        super(BiLSTM_Attention, self).__init__()\n",
+    "        # embedding之后的shape: torch.Size([200, 8, 300])\n",
+    "        self.word_embeddings = nn.Embedding(vocab_size, embedding_dim)\n",
+    "        self.word_embeddings = self.word_embeddings.from_pretrained(\n",
+    "            vectors, freeze=False)\n",
     "        # bidirectional设为True即得到双向循环神经网络\n",
-    "        self.encoder = nn.LSTM(input_size=embedding_dim, \n",
-    "                                hidden_size=num_hiddens, \n",
-    "                                num_layers=num_layers,\n",
-    "                                batch_first=True,\n",
-    "                                bidirectional=True)\n",
+    "        self.encoder = nn.LSTM(input_size=embedding_dim,\n",
+    "                               hidden_size=num_hiddens,\n",
+    "                               num_layers=num_layers,\n",
+    "                               batch_first=False,\n",
+    "                               bidirectional=True)\n",
     "        # 初始时间步和最终时间步的隐藏状态作为全连接层输入\n",
+    "        self.w_omega = nn.Parameter(torch.Tensor(\n",
+    "            num_hiddens * 2, num_hiddens * 2))\n",
+    "        self.u_omega = nn.Parameter(torch.Tensor(num_hiddens * 2, 1))\n",
     "        self.decoder = nn.Linear(2*num_hiddens, 2)\n",
     "\n",
+    "        nn.init.uniform_(self.w_omega, -0.1, 0.1)\n",
+    "        nn.init.uniform_(self.u_omega, -0.1, 0.1)\n",
+    "\n",
     "    def forward(self, inputs):\n",
-    "        # inputs的形状是(批量大小, 词数)，因为LSTM需要将序列长度(seq_len)作为第一维，所以将输入转置后\n",
-    "        # 再提取词特征，输出形状为(词数, 批量大小, 词向量维度)\n",
+    "        # inputs的形状是(seq_len,batch_size)\n",
     "        embeddings = self.word_embeddings(inputs)\n",
-    "        # rnn.LSTM只传入输入embeddings，因此只返回最后一层的隐藏层在各时间步的隐藏状态。\n",
-    "        # outputs形状是(词数, 批量大小, 2 * 隐藏单元个数)\n",
-    "        outputs, _ = self.encoder(embeddings) # output, (h, c)\n",
-    "        # 连结初始时间步和最终时间步的隐藏状态作为全连接层输入。它的形状为\n",
-    "        # (批量大小, 4 * 隐藏单元个数)。\n",
-    "        outs = self.decoder(outputs[:, -1, :])\n",
+    "        # 提取词特征，输出形状为(seq_len,batch_size,embedding_dim)\n",
+    "        # rnn.LSTM只返回最后一层的隐藏层在各时间步的隐藏状态。\n",
+    "        outputs, _ = self.encoder(embeddings)  # output, (h, c)\n",
+    "        # outputs形状是(seq_len,batch_size, 2 * num_hiddens)\n",
+    "        x = outputs.permute(1, 0, 2)\n",
+    "        # x形状是(batch_size, seq_len, 2 * num_hiddens)\n",
+    "        \n",
+    "        # Attention过程\n",
+    "        u = torch.tanh(torch.matmul(x, self.w_omega))\n",
+    "       # u形状是(batch_size, seq_len, 2 * num_hiddens)\n",
+    "        att = torch.matmul(u, self.u_omega)\n",
+    "       # att形状是(batch_size, seq_len, 1)\n",
+    "        att_score = F.softmax(att, dim=1)\n",
+    "       # att_score形状仍为(batch_size, seq_len, 1)\n",
+    "        scored_x = x * att_score\n",
+    "       # scored_x形状是(batch_size, seq_len, 2 * num_hiddens)\n",
+    "        # Attention过程结束\n",
+    "        \n",
+    "        feat = torch.sum(scored_x, dim=1)\n",
+    "       # feat形状是(batch_size, 2 * num_hiddens)\n",
+    "        outs = self.decoder(feat)\n",
+    "       # out形状是(batch_size, 2)\n",
     "        return outs"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 85,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "BiRNN(\n",
+      "BiLSTM_Attention(\n",
       "  (word_embeddings): Embedding(34841, 100)\n",
-      "  (encoder): LSTM(100, 64, batch_first=True, bidirectional=True)\n",
+      "  (encoder): LSTM(100, 64, bidirectional=True)\n",
       "  (decoder): Linear(in_features=128, out_features=2, bias=True)\n",
       ")\n"
      ]
@@ -296,7 +319,7 @@
    ],
    "source": [
     "embedding_dim, num_hiddens, num_layers = 100, 64, 1\n",
-    "net = BiRNN(vocab_size, embedding_dim, num_hiddens, num_layers)\n",
+    "net = BiLSTM_Attention(vocab_size, embedding_dim, num_hiddens, num_layers)\n",
     "print(net)"
    ]
   },
@@ -309,16 +332,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def evaluate_accuracy(data_iter, net):\n",
+    "def evaluate_accuracy(data_iter,net):\n",
     "    acc_sum, n = 0.0, 0\n",
     "    with torch.no_grad():\n",
-    "        for batch_idx, batch in enumerate(train_iter):\n",
+    "        for batch_idx, batch in enumerate(data_iter):\n",
     "            X, y = batch.text, batch.label\n",
-    "            X = X.permute(1, 0)\n",
+    "         #   X = X.permute(1, 0)\n",
     "            y.data.sub_(1)  #X转置 y为啥要减1\n",
     "            if isinstance(net, torch.nn.Module):\n",
     "                net.eval() # 评估模式, 这会关闭dropout\n",
@@ -336,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +369,7 @@
     "        train_l_sum, train_acc_sum, n, start = 0.0, 0.0, 0, time.time()\n",
     "        for batch_idx, batch in enumerate(train_iter):\n",
     "            X, y = batch.text, batch.label\n",
-    "            X = X.permute(1, 0)\n",
+    "           # X = X.permute(1, 0)\n",
     "            y.data.sub_(1)  #X转置 y为啥要减1\n",
     "            y_hat = net(X)\n",
     "            l = loss(y_hat, y)\n",
@@ -366,16 +389,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 88,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "epoch 1, loss 0.3787, train acc 0.827, test acc 0.935, time 684.1 sec\n",
-      "epoch 2, loss 0.0774, train acc 0.943, test acc 0.964, time 837.2 sec\n",
-      "epoch 3, loss 0.0358, train acc 0.961, test acc 0.971, time 1081.4 sec\n"
+      "epoch 1, loss 0.0815, train acc 0.967, test acc 0.904, time 383.3 sec\n",
+      "epoch 2, loss 0.0290, train acc 0.978, test acc 0.896, time 382.0 sec\n",
+      "epoch 3, loss 0.0176, train acc 0.979, test acc 0.895, time 380.0 sec\n",
+      "epoch 4, loss 0.0124, train acc 0.980, test acc 0.895, time 400.7 sec\n",
+      "epoch 5, loss 0.0096, train acc 0.981, test acc 0.896, time 437.9 sec\n"
      ]
     }
    ],
